Added Task #1 description

--- a/data-analysis/Workshop task.ipynb
+++ b/data-analysis/Workshop task.ipynb
@@ -13,7 +13,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task 1 - "
+    "## Task 1 - Basic Data Exploration\n",
+    "\n",
+    "1. Load US 2014 city population data set (datasets/2014_us_cities.csv) in Pandas\n",
+    "2. Explore data with basic functions (mean, average, head, tail, min, max, sort_values)\n",
+    "3. Count the amount of cities that have population of more than 250 000 people\n",
+    "4. Get the names of the cities starting with a letter \"A\" that are located at least 30 degrees north"
    ]
   },
   {
