Added Data Analysis Task #2 description

--- a/data-analysis/Workshop task.ipynb
+++ b/data-analysis/Workshop task.ipynb
@@ -25,14 +25,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task 2 -"
+    "## Task 2 - Basic Data Analysis\n",
+    "1. Load Titanic passenger data set (datasets/titanic.csv) in Pandas\n",
+    "2. Explore the data\n",
+    "3. Come up with a hypothesis based on your observation of the data\n",
+    "4. Clean the data (missing values, duplicates etc.)\n",
+    "5. What was the average age of passengers on Titanic?\n",
+    "6. How many passengers in 3rd class survived?\n",
+    "7. What is the survival rate based on the class of the passenger cabin?\n",
+    "8. Confirm or reject your hypothesis made earlier."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task 3 -"
+    "## Task 3 -\n",
+    "1. "
    ]
   },
   {
