Updated Workshop task description

--- a/data-analysis/Workshop task.ipynb
+++ b/data-analysis/Workshop task.ipynb
@@ -16,7 +16,7 @@
     "## Task 1 - Basic Data Exploration\n",
     "\n",
     "1. Load US 2014 city population data set (datasets/2014_us_cities.csv) in Pandas\n",
-    "2. Explore data with basic functions (mean, average, head, tail, min, max, sort_values)\n",
+    "2. Explore data with basic functions (mean, median, head, tail, min, max, sort_values, describe, info)\n",
     "3. Count the amount of cities that have population of more than 250 000 people\n",
     "4. Get the names of the cities starting with a letter \"A\" that are located at least 30 degrees north"
    ]
@@ -35,21 +35,6 @@
     "7. What is the survival rate based on the class of the passenger cabin?\n",
     "8. Confirm or reject your hypothesis made earlier."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Task 3 -\n",
-    "1. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
