--- a/data-analysis/Introduction to Data Analysis.ipynb
+++ b/data-analysis/Introduction to Data Analysis.ipynb
@@ -1,6 +1,325 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Introduction to Data Analysis with Python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Python has very rich data analysis ecosystem supported by the academic field"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### We will focus only on a specific library - Pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>numbers</th>\n",
+       "      <th>words</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>one</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>two</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>three</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>four</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>five</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   numbers  words\n",
+       "0        1    one\n",
+       "1        2    two\n",
+       "2        3  three\n",
+       "3        4   four\n",
+       "4        5   five"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The work with Pandas usually begins like this:\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Read CSV file into Pandas DataFrame\n",
+    "df = pd.read_csv('sample.csv')\n",
+    "\n",
+    "# But that is not the only way -\n",
+    "numbers = [1, 2, 3, 4, 5]\n",
+    "words = ['one', 'two', 'three', 'four', 'five']\n",
+    "\n",
+    "# Create Series (array like structures) of data \n",
+    "number_series = pd.Series(numbers)\n",
+    "word_series = pd.Series(words)\n",
+    "\n",
+    "# Construct a dictionary to identify column names of our DataFrame\n",
+    "number_word_dict = {\n",
+    "    'numbers': numbers,\n",
+    "    'words': words\n",
+    "}\n",
+    "\n",
+    "df2 = pd.DataFrame().from_dict(number_word_dict)\n",
+    "\n",
+    "# Output dataframes just by writing variable name (one output per cell)\n",
+    "df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Finding amount of rows - the classic way. Seriously, len() is pretty good in Python\n",
+    "len(df2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Explore the DataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 5 entries, 0 to 4\n",
+      "Data columns (total 2 columns):\n",
+      "numbers    5 non-null int64\n",
+      "words      5 non-null object\n",
+      "dtypes: int64(1), object(1)\n",
+      "memory usage: 160.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print first rows\n",
+    "df2.head()\n",
+    "\n",
+    "# Print last 2 rows\n",
+    "df2.tail(2)\n",
+    "\n",
+    "# Random sample of 3 rows\n",
+    "df2.sample(3)\n",
+    "\n",
+    "# Calculate statistical measures of the DataFrame\n",
+    "df2.describe()\n",
+    "\n",
+    "# Memory footprint and kind of cool stuff\n",
+    "df2.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Modifying the DataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>numbers</th>\n",
+       "      <th>words</th>\n",
+       "      <th>numbers_and_words</th>\n",
+       "      <th>column</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>one</td>\n",
+       "      <td>1 - one</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>two</td>\n",
+       "      <td>2 - two</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>three</td>\n",
+       "      <td>3 - three</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>four</td>\n",
+       "      <td>4 - four</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>five</td>\n",
+       "      <td>5 - five</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   numbers  words numbers_and_words  column\n",
+       "0        1    one           1 - one       1\n",
+       "1        2    two           2 - two       1\n",
+       "2        3  three         3 - three       1\n",
+       "3        4   four          4 - four       1\n",
+       "4        5   five          5 - five       1"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# New column? Why not\n",
+    "df2['column'] = 1\n",
+    "\n",
+    "# Why not make it more exciting - value from two existing columns\n",
+    "df2['numbers_and_words'] = df2.apply(lambda x: \"{} - {}\".format(x.numbers, x.words), axis=1)\n",
+    "\n",
+    "df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'two'"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Select word from the second row\n",
+    "df2.words.iloc[1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Filtering data in DataFrame"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -12,23 +331,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
